# supabase-py-todo-basics

./: .env.example  README.md  auth_example.py  crud_example.py  func.py  pyproject.toml  storage.py
supabase/: config.toml
