[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Revanth Vermareddy <vermareddyrevanth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^2.4.3"
python-dotenv = "^1.0.1"
supabase-functions = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
